--- a/style.css
+++ b/style.css
@@ -51,28 +51,40 @@ header{
 }
 .articles__item{
   display: flex;
-  justify-content: space-around;
+  justify-content:flex-start;
   align-items: center;
   border-bottom: 1px solid #CDD3D5;
 }
 .articles__item:nth-child(even){
   background-color: #CDD3D5;
 }
-.item__checkbox{}
-.item__counter{
+.item__checkbox{
+  margin-left: 20px;
+}
+.item__quantity{
   height: 25px;
   width: 25px;
   border: solid 1px grey;
   border-radius: 5px;
   color: #4CA4BA;
   text-align: center;
+  margin-left: 20px;
 }
-.item__descrition{
+.item__description{
+  padding-left: 0;
 }
-.item__description--title{}
-.item__description--brand{}
-.item__description--weight{}
-.item__price{}
+.item__description--title{
+    padding-left: 20px;
+}
+.item__description--brand{
+    padding-left: 20px;
+}
+.item__description--weight{
+    padding-left: 20px;
+}
+.item__price{
+    padding-left: 20px;
+}
 
 /*Purchase section*/
 .main__purchase{
